# MetroVision

./: .dockerignore  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.local.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml
.kiln/: REPORT.md  STATE.md  architecture-handoff.md  master-plan.md
.kiln/design/: creative-direction.md  style-guide.md  tokens.css  tokens.json
.kiln/docs/: VISION.md  arch-constraints.md  architecture.md  (+10 more)
.planning/: PROJECT.md  ROADMAP.md  STATE.md  VISUALIZE-COMPOSITION-PLAN.md  tuning-agent-and-ran-completion.md
comfyui-metrovision/: __init__.py  nodes.py  pyproject.toml
docs/: pipeline-analysis.md  production-ingest.md  tuning-flow.md
drizzle/: 0001_young_professor_monster.sql  0003_orange_oracle.sql  0008_ingest_runs.sql  0009_boundary_cut_tuning.sql  0010_boundary_presets_community.sql  0011_ingest_async_jobs.sql  0012_boundary_recall_first_default.sql
pipeline/: batch_api_prototype.py  batch_worker.py  classify.py  config.py  detect_region.py  main.py  rate_limiter.py  requirements.txt  shot_detect.py  taxonomy.py  upload_blob.py  write_db.py
scripts/: check-schema-drift.ts  db-migrate.mjs  detect-export-cuts.ts  detect-refine-fn-windows.ts  ensure-ffmpeg-static.cjs  eval-boundary-deltas.ts  eval-boundary-misses.ts  eval-pipeline.ts  eval-smoke.ts  export-film-eval.ts  sweep-eval-tolerance.ts  sweep-transnet-threshold.ts  worker-reachability-smoke.ts
worker/: package.json  railway.toml  tsconfig.json
(+220 files in other folders)
